# MultiAgent

./: .env  Logs.py  README.md  agent.py  agent_server.py  client.py  main.py  pyproject.toml  requirements.txt
Api/: OMDBApi.py  OpenWeatherApi.py  TimeModule.py
logs/: feedback_log.jsonl
