[project]
name = "gedion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.0.1",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.5",
    "langserve>=0.3.1",
    "pyinstaller>=6.14.2",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "sse-starlette>=2.4.1",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
]
